// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ESPHome Compose Build > basic-device 1`] = `
"esphome:
  name: basic-device
  comment: A basic ESPHome device
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
ota:
  platform: esphome
logger:
  level: DEBUG
"
`;

exports[`ESPHome Compose Build > dashboard-device 1`] = `
"esphome:
  name: living-room-dashboard
  friendly_name: Living Room Dashboard
  comment: A custom Home Assistant dashboard.
  min_version: 2026.1.0
esp32:
  variant: ESP32P4
  flash_size: 32MB
  cpu_frequency: 360MHZ
  framework:
    type: esp-idf
    version: latest
    advanced:
      enable_idf_experimental_features: true
esp32_hosted:
  variant: ESP32C6
  reset_pin: 54
  cmd_pin: 19
  clk_pin: 18
  d0_pin: 14
  d1_pin: 15
  d2_pin: 16
  d3_pin: 17
  active_high: true
psram:
  mode: hex
  speed: 200MHz
preferences:
  flash_write_interval: 5min
esp_ldo:
  voltage: 2.5V
  channel: "3"
i2c:
  id: r_ref0
  sda: 7
  scl: 8
  frequency: 400kHz
  scan: true
touchscreen:
  platform: gt911
  i2c_id: r_ref0
  display: r_ref1
  update_interval: 50ms
  transform:
    swap_xy: true
    mirror_x: true
    mirror_y: false
output:
  id: r_ref2
  platform: ledc
  pin: 26
  frequency: 1000Hz
light:
  platform: monochromatic
  output: r_ref2
  name: Display Backlight
  icon: mdi:lightbulb-on
  restore_mode: ALWAYS_ON
  default_transition_length:
    milliseconds: 250
display:
  id: r_ref1
  platform: mipi_dsi
  model: WAVESHARE-P4-NANO-10.1
  rotation: 270
i2s_audio:
  id: r_ref3
  i2s_mclk_pin: 13
  i2s_lrclk_pin: 10
  i2s_bclk_pin: 12
audio_dac:
  platform: es8311
  i2c_id: r_ref0
  address: 24
audio_adc:
  platform: es7210
  i2c_id: r_ref0
  address: 64
microphone:
  platform: i2s_audio
  i2s_audio_id: r_ref3
  i2s_din_pin: 11
  sample_rate: 16000
  bits_per_sample: 16bit
  adc_type: external
speaker:
  - id: r_ref4
    platform: i2s_audio
    i2s_audio_id: r_ref3
    i2s_dout_pin: 9
    dac_type: external
    channel: mono
    buffer_duration: 100ms
    bits_per_sample: 16bit
    sample_rate: 48000
  - platform: mixer
    output_speaker: r_ref4
    source_speakers:
      - id: r_ref5
        timeout: never
      - id: r_ref6
        timeout: never
  - id: r_ref7
    platform: resampler
    output_speaker: r_ref5
    sample_rate: 48000
    bits_per_sample: 16
  - platform: resampler
    output_speaker: r_ref6
    sample_rate: 48000
    bits_per_sample: 16
rtttl:
  speaker: r_ref7
switch:
  platform: gpio
  pin: 53
  name: Speaker Enable
  icon: mdi:speaker
  entity_category: config
  restore_mode: RESTORE_DEFAULT_ON
wifi:
  networks:
    - ssid: HomeWifi
      password: s3cr3t!!
  power_save_mode: NONE
  fast_connect: true
  ap:
    password: password1234
api:
captive_portal:
web_server:
  port: 80
  version: "3"
ota:
  platform: esphome
logger:
  level: DEBUG
  hardware_uart: UART0
  logs:
    lvgl: INFO
binary_sensor:
  - platform: homeassistant
    name: Kitchen Floods
    entity_id: light.kitchen_floods
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Living Room Light
    entity_id: light.living_room
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Front Door
    entity_id: binary_sensor.front_door_sensor_window_door_is_open
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Back Door
    entity_id: binary_sensor.back_door_sensor_window_door_is_open_2
    trigger_on_initial_state: true
  - platform: homeassistant
    name: Living Room Motion
    entity_id: binary_sensor.living_room_motion_sensor_motion_detection
    trigger_on_initial_state: true
lvgl:
  displays:
    - r_ref1
"
`;

exports[`ESPHome Compose Build > design-system-device 1`] = `
"esphome:
  name: design-system-device
  comment: Design system demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  style_definitions:
    - id: ds_bg
      bg_color: "0x121212"
    - id: ds_surface
      bg_color: "0x1E1E1E"
    - id: ds_surface_alt
      bg_color: "0x2C2C2C"
    - id: ds_border
      border_color: "0x3A3A3A"
    - id: ds_text_primary
      text_color: "0xE0E0E0"
      text_font: montserrat_16
    - id: ds_text_secondary
      text_color: "0x9E9E9E"
      text_font: montserrat_16
    - id: ds_text_disabled
      text_color: "0x616161"
      text_font: montserrat_16
    - id: ds_text_title
      text_color: "0xE0E0E0"
      text_font: montserrat_28
    - id: ds_text_subtitle
      text_color: "0xE0E0E0"
      text_font: montserrat_20
    - id: ds_text_body
      text_color: "0xE0E0E0"
      text_font: montserrat_16
    - id: ds_text_caption
      text_color: "0xE0E0E0"
      text_font: montserrat_12
    - id: ds_status_primary_solid
      bg_color: "0x1E88E5"
    - id: ds_status_primary_solid_text
      text_color: "0xFFFFFF"
    - id: ds_status_primary_outline
      bg_opa: TRANSP
      border_color: "0x1E88E5"
      border_width: 2
    - id: ds_status_primary_outline_text
      text_color: "0x1E88E5"
    - id: ds_status_secondary_solid
      bg_color: "0x546E7A"
    - id: ds_status_secondary_solid_text
      text_color: "0xFFFFFF"
    - id: ds_status_secondary_outline
      bg_opa: TRANSP
      border_color: "0x546E7A"
      border_width: 2
    - id: ds_status_secondary_outline_text
      text_color: "0x546E7A"
    - id: ds_status_success_solid
      bg_color: "0x43A047"
    - id: ds_status_success_solid_text
      text_color: "0xFFFFFF"
    - id: ds_status_success_outline
      bg_opa: TRANSP
      border_color: "0x43A047"
      border_width: 2
    - id: ds_status_success_outline_text
      text_color: "0x43A047"
    - id: ds_status_warning_solid
      bg_color: "0xFB8C00"
    - id: ds_status_warning_solid_text
      text_color: "0x000000"
    - id: ds_status_warning_outline
      bg_opa: TRANSP
      border_color: "0xFB8C00"
      border_width: 2
    - id: ds_status_warning_outline_text
      text_color: "0xFB8C00"
    - id: ds_status_danger_solid
      bg_color: "0xE53935"
    - id: ds_status_danger_solid_text
      text_color: "0xFFFFFF"
    - id: ds_status_danger_outline
      bg_opa: TRANSP
      border_color: "0xE53935"
      border_width: 2
    - id: ds_status_danger_outline_text
      text_color: "0xE53935"
    - id: ds_slider_indicator
      bg_color: "0x1E88E5"
    - id: ds_slider_knob
      bg_color: "0xE0E0E0"
    - id: ds_switch_indicator
      bg_color: "0x1E88E5"
    - id: ds_switch_knob
      bg_color: "0xE0E0E0"
    - id: ds_arc_indicator
      bg_color: "0x1E88E5"
    - id: ds_arc_knob
      bg_color: "0xE0E0E0"
  theme:
    label:
      text_color: "0xE0E0E0"
      text_font: montserrat_16
    button:
      bg_color: "0x1E88E5"
      border_width: 0
      pressed:
        bg_color: "0x1565C0"
    obj:
      border_width: 0
      bg_opa: TRANSP
    slider:
      bg_color: "0x2C2C2C"
      indicator:
        bg_color: "0x1E88E5"
      knob:
        bg_color: "0xE0E0E0"
    switch:
      bg_color: "0x2C2C2C"
      indicator:
        bg_color: "0x1E88E5"
      knob:
        bg_color: "0xE0E0E0"
    arc:
      arc_color: "0x2C2C2C"
      indicator:
        arc_color: "0x1E88E5"
      knob:
        bg_color: "0xE0E0E0"
    dropdown:
      text_color: "0xE0E0E0"
      text_font: montserrat_16
      bg_color: "0x1E1E1E"
      border_color: "0x3A3A3A"
      border_width: 1
  pages:
    - styles: ds_bg
      border_width: 0
      pad_all: 24
      scrollbar_mode: 'OFF'
      widgets:
        - obj:
            width: 100%
            height: SIZE_CONTENT
            bg_opa: TRANSP
            border_width: 0
            scrollbar_mode: 'OFF'
            layout:
              type: flex
              flex_flow: COLUMN
            widgets:
              - label:
                  styles: ds_text_title
              - obj:
                  styles: ds_surface_alt
                  pad_all: 16
                  radius: 8
                  border_width: 0
                  width: 100%
                  height: SIZE_CONTENT
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: COLUMN
                  widgets:
                    - label:
                        styles: ds_text_subtitle
                    - obj:
                        bg_opa: TRANSP
                        width: 100%
                        height: SIZE_CONTENT
                        layout:
                          type: flex
                          flex_flow: COLUMN
                        widgets:
                          - label:
                              styles: ds_text_primary
                              text: Brightness
                          - slider:
                              min_value: 0
                              max_value: 255
                    - obj:
                        bg_opa: TRANSP
                        width: 100%
                        height: SIZE_CONTENT
                        layout:
                          type: flex
                          flex_flow: ROW
                          flex_align_main: SPACE_BETWEEN
                          flex_align_cross: CENTER
                        widgets:
                          - label:
                              styles: ds_text_primary
                              text: Power
                          - switch: {}
              - obj:
                  width: 100%
                  height: SIZE_CONTENT
                  bg_opa: TRANSP
                  border_width: 0
                  scrollbar_mode: 'OFF'
                  layout:
                    type: flex
                    flex_flow: ROW
                    flex_align_main: SPACE_BETWEEN
                  widgets:
                    - button:
                        styles: ds_status_success_solid
                        width: 104
                        height: 36
                        pressed:
                          bg_color: "0x2E7D32"
                        widgets:
                          - label:
                              styles: ds_status_success_solid_text
                              text: Turn On
                              text_font: montserrat_14
                              align: CENTER
                    - button:
                        styles: ds_status_danger_outline
                        width: 104
                        height: 36
                        pressed:
                          bg_color: "0xE53935"
                          bg_opa: COVER
                        widgets:
                          - label:
                              styles: ds_status_danger_outline_text
                              text: Turn Off
                              text_font: montserrat_14
                              align: CENTER
"
`;

exports[`ESPHome Compose Build > function-component-device 1`] = `
"esphome:
  name: component-device
  comment: Device built from function components
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
ota:
  platform: esphome
logger:
  level: INFO
"
`;

exports[`ESPHome Compose Build > ha-binding-device 1`] = `
"esphome:
  name: ha-binding-device
  comment: HA entity binding demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - label:
            x: 10
            y: 10
            text: !lambda "return std::string(id(ha_light_kitchen_floods).state ? \\"on\\" :
              \\"off\\");"
            id: rw_ref1
        - button:
            x: 10
            y: 40
            width: 120
            height: 50
            on_release:
              - homeassistant.action:
                  action: light.toggle
                  data:
                    entity_id: light.kitchen_floods
            widgets:
              - label:
                  text: Toggle
                  align: CENTER
        - label:
            x: 10
            y: 100
            text: !lambda "return to_string(id(ha_sensor_living_room_temperature).state);"
            id: rw_ref2
binary_sensor:
  platform: homeassistant
  id: ha_light_kitchen_floods
  entity_id: light.kitchen_floods
  trigger_on_initial_state: true
  on_state:
    lvgl.label.update:
      id: rw_ref1
      text: !lambda "return std::string(x ? \\"on\\" : \\"off\\");"
sensor:
  platform: homeassistant
  id: ha_sensor_living_room_temperature
  entity_id: sensor.living_room_temperature
  on_value:
    lvgl.label.update:
      id: rw_ref2
      text: !lambda "return to_string(x);"
"
`;

exports[`ESPHome Compose Build > lvgl-device 1`] = `
"esphome:
  name: lvgl-device
  comment: LVGL single-page button demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref0
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  data_rate: 40MHz
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref0
  pages:
    - widgets:
        - button:
            x: 10
            y: 10
            width: 120
            height: 50
            widgets:
              - label:
                  text: Click me
                  align: CENTER
"
`;

exports[`ESPHome Compose Build > reactive-device 1`] = `
"esphome:
  name: reactive-device
  comment: Local ref reactive binding demo
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
sensor:
  id: r_ref0
  platform: internal_temperature
  name: ESP Temperature
  on_value:
    lvgl.label.update:
      id: rw_ref1
      text: !lambda "return x;"
spi:
  clk_pin: 18
  mosi_pin: 23
display:
  id: r_ref2
  platform: ili9xxx
  model: ILI9341
  invert_colors: false
  cs_pin: 5
  dc_pin: 27
  reset_pin: 33
lvgl:
  displays:
    - r_ref2
  pages:
    - widgets:
        - label:
            x: 10
            y: 10
            text: !lambda "return id(r_ref0).state;"
            id: rw_ref1
        - button:
            x: 10
            y: 50
            width: 120
            height: 50
            on_release:
              - homeassistant.action:
                  action: switch.toggle
                  data:
                    entity_id: switch.space_heater
            widgets:
              - label:
                  text: Heater
                  align: CENTER
binary_sensor:
  platform: homeassistant
  id: ha_switch_space_heater
  entity_id: switch.space_heater
  trigger_on_initial_state: true
"
`;

exports[`ESPHome Compose Build > script-device 1`] = `
"esphome:
  name: script-device
  comment: Device using function-as-script authoring
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: INFO
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute: greet
  on_release:
    - delay: 100ms
script:
  - id: greet
    then:
      - logger.log: Hello from ESPCompose!
      - delay: 500ms
"
`;

exports[`ESPHome Compose Build > sensor-device 1`] = `
"esphome:
  name: sensor-device
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
sensor:
  platform: dht
  pin: 4
  model: DHT22
  temperature:
    name: Temperature
  humidity:
    name: Humidity
binary_sensor:
  platform: gpio
  pin: 5
  name: Motion Sensor
  device_class: motion
logger:
  level: INFO
"
`;

exports[`ESPHome Compose Build > trigger-device 1`] = `
"esphome:
  name: trigger-device
  comment: Device demonstrating automation API
esp32:
  board: esp32dev
  framework:
    type: esp-idf
wifi:
  ssid: HomeWifi
  password: s3cr3t!!
api:
logger:
  level: DEBUG
output:
  id: r_ref0
  platform: ledc
  pin: 19
  frequency: 1000Hz
light:
  id: r_ref1
  platform: monochromatic
  name: Desk Light
  output: r_ref0
switch:
  id: r_ref2
  platform: gpio
  pin: 5
  name: Relay
binary_sensor:
  platform: gpio
  pin: 4
  name: Button
  on_press:
    - script.execute: toggle_all
  on_release:
    - light.turn_off: r_ref1
    - delay: 100ms
    - switch.turn_off: r_ref2
  on_double_click:
    - script.execute: dim_light
script:
  - id: toggle_all
    then:
      - light.toggle: r_ref1
      - delay: 200ms
      - switch.toggle: r_ref2
  - id: dim_light
    then:
      - light.turn_on:
          id: r_ref1
          brightness: 0.5
      - logger.log: Light dimmed to 50%
"
`;
